Thu Aug  5 10:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Tools/gdomap.c: prb_add() maintain server info in date order.
	prb_del() removed, bugfixes to notice when a server dies.

Tue Aug  3 12:36:54 1999  Adam Fedor  <fedor@ultra.doc.com>

	* Source/NSInvocation.m (-initWithTarget:selector:): Hack for
	sparc and ppc machines to align structs on word boundaries.
	* mframe/sparc/solaris2.6: New file with fix for putting small
	structures at correct offset.

Mon Aug  2  8:10:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/propList.h: parseQuotedString() fix for parsing octal escape
	sequences - hope it's right now.

Sun Aug  1  7:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBundle.m: ([+localizedStringForKey:value:table:]) Fixed so
	that debugging behavior only takes place when NSShowNonLocalizedStrings
	default is 'YES'.

1999-07-29  Adam Fedor  <fedor@gnu.org>

	* config.guess: Updated from latest version + fix for Netwinder.
	* config.sub: Likewise.

	* Headers/gnustep/base/Foundation.h: Include NSPage.h
	* Headers/gnustep/base/NSPortCoder.h: Remove ref to Port.h

Wed Jul 28 15:53:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSObject.m: ([+isKindOfClass:]) Fixed to return NO except
	when both the argument and the receiver are NSObject - as specified
	in the MacOS-X documentation.  Thanks to Helge for pointing this out.

Mon Jul 26 21:22:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Fix cStrings to use unsigned char throughout - to avoid problems
	with character sets other than ascii.  Suggested by Kai Henningsen.
	* Headers/Foundation/NSGCString.h: Use unsigned chars.
	* Source/NSGCString.m: Use unsigned chars.
	* Source/GSeq.h: Use unsigned chars.
	* Source/propList.h: Use unsigned chars.

Fri Jul 23 22:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/UnixFileHandle.m: Tidy a little and make sure that